# snake_engine

./: CMakeLists.txt  CMakePresets.json  Dependecies.cmake  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/: engine.hpp
include/snake_engine/: engine.hpp  playground.hpp  sample_library.hpp  snake.hpp
src/: engine.cpp  playground.cpp  snake.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  snake_run.cpp  tests.cpp
